<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TDAM Grupo 13</string>
    <string name="menu_settings">Settings</string>
    <string name="FragmentContactos">This is Fragment Contactos</string>
    <string name="FragmentHistorial">This is Fragment Historial</string>
    <string name="FragmentConectividad">This is Fragment Conectividad</string>
    <string name="FragmentConfiguracion">This is Fragment Configuracion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_contact_profile">ActivityContactProfile</string>
    <string name="contact_name">contact_name</string>
    <string name="profile_picture">profile picture</string>
    <string name="history_type">history type logo</string>
    <string name="title_activity_web_message">WebMessageActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="title_activity_location">LocationActivity</string>
    
<!-- Preferences -->
	<!-- 	Messaging -->
	<string name="messaging_pref_title">Servicio de mensajería</string>
	
	<string name="user_name_pref_title">Nombre de usuario</string>
	<string name="user_name_pref_title_s">Nombre de usuario para el servicio de mensajes</string>
	<string name="user_name_pref_dialog">Ingrese un nombre de usuario:</string>
	
	<string name="password_pref_title">Contraseña</string>
	<string name="password_pref_title_s">Contraseña para el servicio de mensajes</string>
	<string name="password_pref_dialog">Ingrese la contraseña:</string>
	
	<string name="register_pref_title">Registrar</string>
	<string name="register_pref_title_s">Click para registrar usuario</string>
	
	<string name="service_url_pref_title">URL</string>
	<string name="service_url_pref_title_s">URL del servicio de mensajes</string>
	<string name="service_url_pref_dialog">Ingrese la URL:</string>
	
	<!-- 	Contactos -->
	<string name="contacts_pref_title">Contactos</string>
	<string name="contacts_pref_w_phone">Con teléfono</string>
	<string name="contacts_pref_w_phone_s">Mostrar sólo contactos con teléfono</string>
	<string name="contacts_pref_order">Orden</string>
	<string name="contacts_pref_order_s">Orden en que se muestran los contactos</string>
	<string name="contacts_pref_order_dialog">Seleccione una opción:</string>
	<!-- 	Hisotial -->
	<string name="history_pref_title">Historial</string>
	<string name="history_pref_order">Orden</string>
	<string name="history_pref_order_s">Orden en que se muestra el historial</string>
	<string name="history_pref_order_dialog">Seleccione una opción:</string>
	
</resources>