<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
            android:title="@string/messaging_pref_title">
 
        <EditTextPreference
                android:key="user_name_pref"
                android:title="@string/user_name_pref_title"
                android:summary="@string/user_name_pref_title_s"
                android:dialogTitle="@string/user_name_pref_dialog" />
        <EditTextPreference
                android:key="password_pref"
                android:title="@string/password_pref_title"
                android:summary="@string/password_pref_title_s"
                android:dialogTitle="@string/password_pref_dialog"
                android:password="true" />
        <Preference android:title="@string/register_pref_title"
                android:key="register_pref_button"
                android:summary="@string/register_pref_title_s"/>
        <EditTextPreference
                android:key="service_url_pref"
                android:title="@string/service_url_pref_title"
                android:summary="@string/service_url_pref_title_s"
                android:dialogTitle="@string/service_url_pref_dialog" />
 
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/contacts_pref_title">
        <CheckBoxPreference
                android:key="contacts_pref_w_phone"
                android:title="@string/contacts_pref_w_phone"
                android:summary="@string/contacts_pref_w_phone_s" />
 		<ListPreference
                android:key="contacts_pref_order"
                android:title="@string/contacts_pref_order"
                android:summary="@string/contacts_pref_order_s"
                android:entries="@array/contacts_pref_entries"
                android:entryValues="@array/contacts_pref_entry_values"
                android:dialogTitle="@string/contacts_pref_order_dialog" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/history_pref_title">
 		<ListPreference
                android:key="history_pref_order"
                android:title="@string/history_pref_order"
                android:summary="@string/history_pref_order_s"
                android:entries="@array/history_pref_entries"
                android:entryValues="@array/history_pref_entry_values"
                android:dialogTitle="@string/history_pref_order_dialog" />
    </PreferenceCategory>
 
<!--     <PreferenceCategory -->
<!--             android:title="launch_preferences"> -->
 
<!--         This PreferenceScreen tag serves as a screen break (similar to page break -->
<!--             in word processing). Like for other preference types, we assign a key -->
<!--             here so it is able to save and restore its instance state. --> 
<!--         <PreferenceScreen -->
<!--                 android:key="screen_preference" -->
<!--                 android:title="title_screen_preference" -->
<!--                 android:summary="summary_screen_preference"> -->
                    
<!--             <CheckBoxPreference -->
<!--                     android:key="next_screen_checkbox_preference" -->
<!--                     android:title="title_next_screen_toggle_preference" -->
<!--                     android:summary="summary_next_screen_toggle_preference" /> -->
                
<!--         </PreferenceScreen> -->
 
<!--         <PreferenceScreen -->
<!--                 android:title="title_intent_preference" -->
<!--                 android:summary="summary_intent_preference"> -->
 
<!--             <intent android:action="android.intent.action.VIEW" -->
<!--                     android:data="http://www.android.com" /> -->
 
<!--         </PreferenceScreen> -->
 
<!--     </PreferenceCategory> -->
    
<!--     <PreferenceCategory -->
<!--             android:title="preference_attributes"> -->
    
<!--         <CheckBoxPreference -->
<!--                 android:key="parent_checkbox_preference" -->
<!--                 android:title="title_parent_preference" -->
<!--                 android:summary="summary_parent_preference" /> -->
 
<!--         The visual style of a child is defined by this styled theme attribute. -->
<!--         <CheckBoxPreference -->
<!--                 android:key="child_checkbox_preference" -->
<!--                 android:dependency="parent_checkbox_preference" -->
<!--                 android:layout="?android:attr/preferenceLayoutChild" -->
<!--                 android:title="title_child_preference" -->
<!--                 android:summary="summary_child_preference" /> -->
            
<!--     </PreferenceCategory> -->
    
</PreferenceScreen>